--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,6 +6,14 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spLectures"
+        android:entries="@array/Lectures"
+        android:spinnerMode="dropdown"
+        />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
