--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spLectures"
+        android:entries="@array/Lectures"
+        android:spinnerMode="dropdown"
+        />
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
