--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -6,7 +6,8 @@
     <TextView
         android:id="@+id/tvFandLName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/textSize"/>
 
 
 </RelativeLayout>
