First working version, UI changes needed

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -24,6 +24,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/btSaveDB"
         android:text="save data"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnGraph"
+        android:text="Get graph"/>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
