--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/black" >
+    android:background="@color/colorPrimaryDark"
+    android:gravity="center"
+    >
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnLoginmail"
-        android:text="mail"/>
+        android:text="@string/sign_in_profesor"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnLoginAnon"
-        android:text="anon"
+        android:text="@string/sign_in_student"
         android:layout_below="@id/btnLoginmail"/>
 
-    </RelativeLayout>
+    </LinearLayout>
