--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="textSize">25sp</dimen>
+    <dimen name="paddingListView">5dp</dimen>
+    <dimen name="paddingListViewSides">10dp</dimen>
 </resources>
