--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-    android:padding="@dimen/paddingListView"
     <TextView
         android:id="@+id/tvFandLName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/textSize"
         android:paddingLeft="@dimen/paddingListViewSides"
-        android:paddingRight="@dimen/paddingListViewSides"/>
-
+        android:paddingRight="@dimen/paddingListViewSides"
+        android:textSize="@dimen/textSize" />
 
 </RelativeLayout>
