--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,5 +4,7 @@
 
     <item android:title="Sign out" app:showAsAction="never"
         android:id="@+id/menu_sign_out"/>
+    <item android:title="Export database" app:showAsAction="never"
+        android:id="@+id/menu_export"/>
 
 </menu>
